@@ -53,4 +53,5 @@
   <li>Greg Heo</li>
   <li>Phillip Smith</li>
   <li>Alex Krohn</li>
+  <li>Brian Smith</li>
 </ul>
